Removed un-used routes, moved selectable attributes component to presentation preparation module, clean up un-used components

--- a/src/app/features/presentation-request-preparation/components/selectable-attestation-attributes/selectable-attestation-attributes.component.scss
+++ b/src/app/features/presentation-request-preparation/components/selectable-attestation-attributes/selectable-attestation-attributes.component.scss
@@ -1,5 +1,5 @@
 @use '/src/template' as temp;
-@use '/src//layout-breakpoint' as points;
+@use '/src/layout-breakpoint' as points;
 
 :host {
     max-width: 40rem;
