Removed scenarios notion from wizard and first step of the wizard displays all supported attestations to select from, styling improvements

--- a/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
+++ b/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
@@ -18,7 +18,7 @@
           <mat-card-subtitle> in <i> {{ attestation.format }} </i> format</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions align="end">
-          <button mat-button (click)="viewContents(attestation)">View Content</button>
+          <button mat-stroked-button (click)="viewContents(attestation)">View Content</button>
         </mat-card-actions>
       </mat-card>
       <br>
