--- a/src/app/features/presentation-request-preparation/home/home.component.scss
+++ b/src/app/features/presentation-request-preparation/home/home.component.scss
@@ -16,4 +16,13 @@
       padding: 2px;
     }
   }
+
+  span#as-pre {
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-family: inherit;
+    unicode-bidi: isolate;
+    margin: 1em 0;
+  }
+
 }
