- Made wallet response decoders reactive, they return an observable of PresentedAttestation. Errors during decoding are not blocking the rendering of the screen. Errored attestation are displayed with the error message. - Added sd-jwt-vc decoder that passes shared attestation to verifier backend to validate and decode - Added "view logs" link to wallet response rendering screen - Minimised stored state of web app. - Clean ups

--- a/src/app/features/presentation-request-preparation/components/attestation-selection/attestation-selection.component.html
+++ b/src/app/features/presentation-request-preparation/components/attestation-selection/attestation-selection.component.html
@@ -8,7 +8,7 @@
   <div>
       <mat-form-field>
         <mat-label>-- attributes by --</mat-label>
-        <mat-select matNativeControl [(value)]="selectedMethod" [formControl]="methodControl" (selectionChange)="emit()">
+        <mat-select matNativeControl [(value)]="selectedMethod" [formControl]="methodControl" (selectionChange)="emitAttestationSelectionChanged()">
           <ng-container *ngFor="let method of attributeSelectionMethods">
             <mat-option [value]="method">{{ labelOf(method) }}</mat-option>
           </ng-container>
@@ -18,7 +18,7 @@
 
       <mat-form-field>
         <mat-label>-- format --</mat-label>
-        <mat-select matNativeControl [(value)]="selectedFormat" [formControl]="formatControl" (selectionChange)="emit()">
+        <mat-select matNativeControl [(value)]="selectedFormat" [formControl]="formatControl" (selectionChange)="emitAttestationSelectionChanged()">
           <ng-container *ngFor="let format of supportedFormats">
             <mat-option [value]="format.key" disabled="{{format.disabled}}">{{ format.value }}</mat-option>
           </ng-container>
