--- a/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
+++ b/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
@@ -5,7 +5,7 @@
         <mat-expansion-panel-header>
           <mat-panel-title>You requested for...</mat-panel-title>
         </mat-expansion-panel-header>
-        <vc-editor [editable]="false" [code]="presentationRequest"></vc-editor>
+        <vc-editor [editable]="false" [code]="presentationQuery"></vc-editor>
       </mat-expansion-panel>
 
       <div class="bg-panel">
