--- a/src/app/features/presentation-request-preparation/home/home.component.html
+++ b/src/app/features/presentation-request-preparation/home/home.component.html
@@ -31,6 +31,23 @@
         </mat-step>
 
         <mat-step>
+          
+          <div style="padding-top: 10px">
+            <ng-template matStepLabel>...select query type</ng-template>
+
+            <mat-button-toggle-group name="fontStyle" aria-label="Presentation query type" [value]="presentationQueryType" >
+              <mat-button-toggle value="dcql">DCQL Query</mat-button-toggle>
+              <mat-button-toggle value="prex">Presentation Exchange</mat-button-toggle>
+            </mat-button-toggle-group>
+          </div>
+            
+          <div class="button-container">
+            <button mat-raised-button matStepperPrevious>Back</button>
+            <button mat-raised-button matStepperNext>Next</button>
+          </div>
+        </mat-step>
+        
+        <mat-step>
           <div style="padding-top: 10px">
             <ng-template matStepLabel>...review and proceed</ng-template>
             <mat-expansion-panel>
