Initial support for DCQL presentation requests

--- a/src/app/features/presentation-request-preparation/components/selectable-attestation-attributes/selectable-attestation-attributes.component.html
+++ b/src/app/features/presentation-request-preparation/components/selectable-attestation-attributes/selectable-attestation-attributes.component.html
@@ -26,6 +26,15 @@
     <vc-editor [code]="inputDescriptorText"></vc-editor>
   </mat-expansion-panel>
 
+  <mat-expansion-panel class="presentation-definition bg-panel">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        DCQL
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <vc-editor [code]="dcqlQueryText"></vc-editor>
+  </mat-expansion-panel>
+
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
