--- a/src/app/features/presentation-request-preparation/components/selectable-attestation-attributes/selectable-attestation-attributes.component.html
+++ b/src/app/features/presentation-request-preparation/components/selectable-attestation-attributes/selectable-attestation-attributes.component.html
@@ -17,6 +17,7 @@
       </ng-container>
     </div>
   </div>
+  <mat-accordion>
   <mat-expansion-panel class="presentation-definition bg-panel">
     <mat-expansion-panel-header>
       <mat-panel-title>
@@ -34,7 +35,7 @@
     </mat-expansion-panel-header>
     <vc-editor [code]="dcqlQueryText"></vc-editor>
   </mat-expansion-panel>
-
+</mat-accordion>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
