--- a/src/app/core/layout/wallet-layout/wallet-layout-header/wallet-layout-header.component.html
+++ b/src/app/core/layout/wallet-layout/wallet-layout-header/wallet-layout-header.component.html
@@ -1,6 +1,5 @@
-
-  <img src="assets/ic-logo.svg" (click)="goHome()" alt="wallet-logo"/>
-
+<header class="container">
+  <img src="assets/ic-logo.svg" (click)="goHome()" alt="wallet-logo" />
 
   <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="menu">
     <mat-icon>menu</mat-icon>
@@ -10,6 +9,9 @@
       <a id="inspectLogs" (click)="inspectLogs()">Inspect transaction logs</a>
     </button>
     <button mat-menu-item>
-      <a id="customScheme" (click)="changeCustomScheme()">Change default scheme</a>
+      <a id="customScheme" (click)="changeCustomScheme()"
+        >Change default scheme</a
+      >
     </button>
   </mat-menu>
+</header>
