--- a/src/app/core/layout/wallet-layout/wallet-layout.component.html
+++ b/src/app/core/layout/wallet-layout/wallet-layout.component.html
@@ -1,5 +1,5 @@
 <vc-wallet-layout-header></vc-wallet-layout-header>
-<div class="body">
+<div class="container">
   <ng-content select="[body-title]"></ng-content>
   <ng-content select="[body]"></ng-content>
 </div>
