--- a/src/app/features/invoke-wallet/components/qr-code/qr-code.component.html
+++ b/src/app/features/invoke-wallet/components/qr-code/qr-code.component.html
@@ -24,10 +24,10 @@
     </div>
   </div>
   <div>
-    <a class="authorize" [href]="deepLinkTxt">OPEN WITH YOUR WALLET</a>
+    <a mat-flat-button class="authorize" [href]="deepLinkTxt">OPEN WITH YOUR WALLET</a>
   </div>
   <div class="show-logs">
-    <a (click)="openLogs()">View transaction logs</a>
+    <a mat-button (click)="openLogs()">View transaction logs</a>
   </div>
 </div>
 
