--- a/src/app/features/presentation-request-preparation/components/selectable-attestation-attributes/selectable-attestation-attributes.component.scss
+++ b/src/app/features/presentation-request-preparation/components/selectable-attestation-attributes/selectable-attestation-attributes.component.scss
@@ -18,7 +18,7 @@
     .creation {
         display: flex;
         flex-direction: column;
-        height: temp.$body-height;
+        max-height: temp.$body-height;
         overflow-y: auto;
 
         .creation-header {
