--- a/src/app/shared/elements/open-logs/open-logs.component.scss
+++ b/src/app/shared/elements/open-logs/open-logs.component.scss
@@ -2,7 +2,7 @@
   .dialog-container {
     min-width: 50em;
     min-height: 25em;
-    padding: 1em;
+    padding-top: 1em;
     .inspect-logs {
       margin-bottom: 1em;
     }
