--- a/src/app/features/presentation-request-preparation/home/home.component.scss
+++ b/src/app/features/presentation-request-preparation/home/home.component.scss
@@ -20,7 +20,7 @@
   span#as-pre {
     white-space: pre-wrap;
     word-break: break-word;
-    font-family: inherit;
+    font-family: monospace;
     unicode-bidi: isolate;
     margin: 1em 0;
   }
