--- a/src/app/features/presentation-request-preparation/home/home.component.scss
+++ b/src/app/features/presentation-request-preparation/home/home.component.scss
@@ -17,6 +17,10 @@
     }
   }
 
+  .query-type-container {
+    margin-bottom: 10px
+  }
+
   span#as-pre {
     white-space: pre-wrap;
     word-break: break-word;
