--- a/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
+++ b/src/app/features/invoke-wallet/components/presentations-results/presentations-results.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div>
+  <div class="result-container">
     <ng-container *ngIf="attestations$ | async as attestations">
       <mat-expansion-panel>
         <mat-expansion-panel-header>
@@ -8,11 +8,9 @@
         <vc-editor [editable]="false" [code]="presentationQuery"></vc-editor>
       </mat-expansion-panel>
 
-      <div class="bg-panel">
-        ...and wallet responded with <strong>{{ attestations.length }}</strong> document(s) ...
-        <div class="show-logs" style="float: right">
-          <a (click)="openLogs()">transaction log</a>
-        </div>
+      <div class="documents-and-log">
+        <span>...and wallet responded with <strong>{{ attestations.length }}</strong> document(s) ...</span>
+        <a mat-button (click)="openLogs()">transaction log</a>
       </div>
 
       <ng-container *ngFor="let attestation of attestations;">
