--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -8,20 +8,21 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.core;
+@include mat.elevation-classes();
+@include mat.app-background();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$verifier-ui-primary: mat.define-palette(mat.$indigo-palette);
-$verifier-ui-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$verifier-ui-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$verifier-ui-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$verifier-ui-warn: mat.define-palette(mat.$red-palette);
+$verifier-ui-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$verifier-ui-theme: mat.define-light-theme((
+$verifier-ui-theme: mat.m2-define-light-theme((
     color: (
         primary: $verifier-ui-primary,
         accent: $verifier-ui-accent,
