--- a/src/app/features/presentation-request-preparation/components/supported-attestations/supported-attestations.component.html
+++ b/src/app/features/presentation-request-preparation/components/supported-attestations/supported-attestations.component.html
@@ -1,8 +1,10 @@
 <div class="component-root">
   <mat-accordion>
     <ng-container *ngFor="let attestation of attestations">
-      <vc-attestation-selection [attestation]="attestation"
-                               (attestationSelectionEvent)="handleAttestationSelectionEvent($event)"></vc-attestation-selection>
+      <vc-attestation-selection
+        [attestation]="attestation"
+        (attestationSelectionEvent)="handleAttestationSelectionEvent($event)"
+      ></vc-attestation-selection>
     </ng-container>
   </mat-accordion>
 </div>
